--- a/m3-theme.scss
+++ b/m3-theme.scss
@@ -4,106 +4,106 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #39BBAF, secondary: #7D9692, tertiary: #7B93AD, neutral: #8E9190
+// Note: Color palettes are generated from primary: #FFDE3F, secondary: #9B9168, tertiary: #6D9B7B, neutral: #949088
 $_palettes: (
   primary: (
     0: #000000,
-    10: #00201d,
-    20: #003733,
-    25: #00433e,
-    30: #00504a,
-    35: #005d56,
-    40: #006a62,
-    50: #00867c,
-    60: #02a297,
-    70: #3cbdb1,
-    80: #5ed9cd,
-    90: #7df6e9,
-    95: #b2fff5,
-    98: #e4fffa,
-    99: #f2fffc,
+    10: #221b00,
+    20: #3a3000,
+    25: #463b00,
+    30: #534600,
+    35: #615200,
+    40: #6e5d00,
+    50: #8b7600,
+    60: #a88f00,
+    70: #c7aa00,
+    80: #e5c524,
+    90: #ffe25e,
+    95: #fff1be,
+    98: #fff9ee,
+    99: #fffbff,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #071f1d,
-    20: #1d3432,
-    25: #28403d,
-    30: #344b48,
-    35: #3f5754,
-    40: #4b6360,
-    50: #637c78,
-    60: #7d9692,
-    70: #97b0ac,
-    80: #b2ccc7,
-    90: #cee8e3,
-    95: #dcf6f1,
-    98: #e4fffa,
-    99: #f2fffc,
+    10: #211b01,
+    20: #373010,
+    25: #423b1a,
+    30: #4e4724,
+    35: #5a522f,
+    40: #675e3a,
+    50: #807750,
+    60: #9b9168,
+    70: #b6ab80,
+    80: #d2c79a,
+    90: #efe3b4,
+    95: #fef1c1,
+    98: #fff9ed,
+    99: #fffbff,
     100: #ffffff,
   ),
   tertiary: (
     0: #000000,
-    10: #011d32,
-    20: #1a3248,
-    25: #253d54,
-    30: #314960,
-    35: #3d556c,
-    40: #496179,
-    50: #627992,
-    60: #7b93ad,
-    70: #95aec9,
-    80: #b0c9e5,
-    90: #cee5ff,
-    95: #e8f2ff,
-    98: #f7f9ff,
-    99: #fcfcff,
+    10: #00210f,
+    20: #083820,
+    25: #17432a,
+    30: #234f35,
+    35: #2f5b40,
+    40: #3b684b,
+    50: #548162,
+    60: #6d9b7b,
+    70: #87b694,
+    80: #a2d2af,
+    90: #bdeeca,
+    95: #cbfdd8,
+    98: #e9ffec,
+    99: #f5fff4,
     100: #ffffff,
   ),
   neutral: (
     0: #000000,
-    4: #0a0b0b,
-    6: #0f1111,
-    10: #191c1c,
-    12: #1d2020,
-    17: #282b2a,
-    20: #2e3130,
-    22: #323534,
-    24: #373a39,
-    25: #393c3b,
-    30: #444747,
-    35: #505352,
-    40: #5c5f5e,
-    50: #747877,
-    60: #8e9190,
-    70: #a9acab,
-    80: #c4c7c6,
-    87: #d8dbda,
-    90: #e1e3e2,
-    92: #e7e9e8,
-    94: #eceeed,
-    95: #eff1f0,
-    96: #f2f4f3,
-    98: #f8faf8,
-    99: #fbfdfb,
+    4: #0c0b09,
+    6: #11100d,
+    10: #1d1b16,
+    12: #211f1a,
+    17: #2c2a24,
+    20: #32302a,
+    22: #37342e,
+    24: #3c3933,
+    25: #3e3b35,
+    30: #494740,
+    35: #55524b,
+    40: #615e57,
+    50: #7a776f,
+    60: #949088,
+    70: #afaba2,
+    80: #cbc6bd,
+    87: #dfdad1,
+    90: #e7e2d9,
+    92: #ede8df,
+    94: #f3ede4,
+    95: #f6f0e7,
+    96: #f9f3ea,
+    98: #fff9ef,
+    99: #fffbff,
     100: #ffffff,
   ),
   neutral-variant: (
     0: #000000,
-    10: #121e1c,
-    20: #263331,
-    25: #313e3c,
-    30: #3d4947,
-    35: #485553,
-    40: #54615f,
-    50: #6d7a77,
-    60: #869391,
-    70: #a0aeab,
-    80: #bcc9c6,
-    90: #d8e5e2,
-    95: #e6f4f0,
-    98: #eefcf9,
-    99: #f2fffc,
+    10: #1f1b0b,
+    20: #35301f,
+    25: #403b29,
+    30: #4c4733,
+    35: #58523e,
+    40: #645e4a,
+    50: #7d7761,
+    60: #989079,
+    70: #b3ab93,
+    80: #cfc6ad,
+    90: #ebe2c8,
+    95: #faf0d6,
+    98: #fff9ee,
+    99: #fffbff,
     100: #ffffff,
   ),
   error: (
