--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,11 @@
 // Basis-Styles
 html,
 body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+main {
+  background-color: #fff9ee;
 }
