refactor(header) removed test-buttons out of template file

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,9 +7,6 @@
       </a>
     </div>
 
-    <button mat-raised-button color="primary">Test Button</button>
-    <button mat-raised-button color="accent">Test Button</button>
-
     <!-- Main Nav - content based on current user-role (admin or customer) -->
     <nav class="main-nav">
       <!-- Links for all authenticated users -->
@@ -100,7 +97,7 @@
       <!-- Login-Button for not logged in users -->
       <ng-template #loginButton>
         <a mat-button routerLink="/auth/login" class="login-btn">
-          <mat-icon>login</mat-icon> Anmelden
+          <mat-icon>login</mat-icon> Anmeldung
         </a>
       </ng-template>
     </div>
