--- a/src/app/features/auth/components/login/login.component.scss
+++ b/src/app/features/auth/components/login/login.component.scss
@@ -8,6 +8,10 @@
   mat-card {
     width: 100%;
     max-width: 400px;
+
+    mat-card-title {
+      margin-bottom: 0.5rem;
+    }
   }
 
   .full-width {
@@ -19,7 +23,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1.5rem;
 
     button {
       width: 100%;
@@ -35,5 +38,38 @@
     color: #f44336;
     margin: 0.5rem 0;
     text-align: center;
+  }
+
+  .register-link,
+  .forgot-password-link {
+    margin-top: 10px;
+    text-align: center;
+
+    a {
+      color: var(--sys-tertiary);
+      text-decoration: none;
+      font-weight: 500;
+
+      &:hover {
+        opacity: 0.6;
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .forgot-password-link {
+    margin-top: 5px;
+
+    a {
+      font-size: 0.9em;
+    }
+  }
+
+  .forgot-password-link {
+    margin-top: 5px;
+
+    a {
+      font-size: 0.9em;
+    }
   }
 }
