--- a/src/app/features/auth/components/register/register.component.scss
+++ b/src/app/features/auth/components/register/register.component.scss
@@ -8,6 +8,10 @@
   mat-card {
     width: 100%;
     max-width: 25rem;
+
+    mat-card-title {
+      margin-bottom: 0.5rem;
+    }
   }
 
   .full-width {
@@ -19,15 +23,25 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 1.5rem;
 
     button {
       width: 100%;
     }
 
     .login-link {
-      margin-top: 1rem;
+      margin-top: 10px;
       text-align: center;
+
+      a {
+        color: var(--sys-tertiary);
+        text-decoration: none;
+        font-weight: 500;
+
+        &:hover {
+          opacity: 0.6;
+          text-decoration: underline;
+        }
+      }
     }
   }
 
