style(layout): improve header and main container layout

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,5 @@
 .main-content {
-  min-height: calc(100vh - 8rem);
+  min-height: calc(100% - 8rem);
   padding: 1rem;
-  max-width: 1200px;
   margin: 0 auto;
 }
