feat(auth): add forgot password link to login page

--- a/src/app/features/auth/components/login/login.component.html
+++ b/src/app/features/auth/components/login/login.component.html
@@ -46,6 +46,10 @@
             Noch kein Konto?
             <a routerLink="/auth/register">Jetzt registrieren</a>
           </p>
+
+          <p class="forgot-password-link">
+            <a routerLink="/auth/forgot-password">Passwort vergessen?</a>
+          </p>
         </div>
       </form>
     </mat-card-content>
