--- a/src/app/features/rooms/components/room-list/room-list.component.html
+++ b/src/app/features/rooms/components/room-list/room-list.component.html
@@ -1,1 +1,101 @@
-<p>room-list works!</p>
+<div class="room-list-container">
+  <header class="room-list-header">
+    <h1>Available Rooms</h1>
+    <p>Find the perfect space for your needs</p>
+  </header>
+
+  <div class="filters-container">
+    <mat-form-field appearance="outline">
+      <mat-label>Room Type</mat-label>
+      <mat-select
+        [(ngModel)]="selectedType"
+        (selectionChange)="onFilterChange()"
+      >
+        <mat-option *ngFor="let type of roomTypes" [value]="type.value">
+          {{ type.label }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Min. Capacity</mat-label>
+      <mat-select
+        [(ngModel)]="minCapacity"
+        (selectionChange)="onFilterChange()"
+      >
+        <mat-option [value]="null">Any</mat-option>
+        <mat-option [value]="2">2+ people</mat-option>
+        <mat-option [value]="4">4+ people</mat-option>
+        <mat-option [value]="8">8+ people</mat-option>
+        <mat-option [value]="12">12+ people</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div class="rooms-grid">
+    <ng-container *ngIf="rooms$ | async as rooms; else loading">
+      <div *ngIf="rooms.length > 0; else noRooms">
+        <mat-card *ngFor="let room of rooms" class="room-card">
+          <mat-card-header>
+            <mat-icon mat-card-avatar>{{
+              getRoomTypeIcon(room.type)
+            }}</mat-icon>
+            <mat-card-title>{{ room.name }}</mat-card-title>
+            <mat-card-subtitle>
+              <mat-chip-set>
+                <mat-chip>{{ room.type | titlecase }}</mat-chip>
+                <mat-chip>{{ room.capacity }} people</mat-chip>
+              </mat-chip-set>
+            </mat-card-subtitle>
+          </mat-card-header>
+
+          <mat-card-content>
+            <p>{{ room.description }}</p>
+            <p class="price">{{ formatPrice(room.pricePerHour) }} / hour</p>
+            <p class="min-duration">
+              Min. duration: {{ room.minDuration }} minutes
+            </p>
+          </mat-card-content>
+
+          <mat-card-actions>
+            <button
+              mat-button
+              color="primary"
+              [routerLink]="['/rooms', room.id]"
+            >
+              VIEW DETAILS
+            </button>
+            <button
+              mat-raised-button
+              color="primary"
+              [routerLink]="['/rooms/book', room.id]"
+            >
+              BOOK NOW
+            </button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+    </ng-container>
+
+    <ng-template #loading>
+      <div class="loading-container">
+        <mat-spinner diameter="40"></mat-spinner>
+        <p>Loading rooms...</p>
+      </div>
+    </ng-template>
+
+    <ng-template #noRooms>
+      <div class="no-rooms-container">
+        <mat-icon>search_off</mat-icon>
+        <p>No rooms found matching your criteria.</p>
+        <button
+          mat-button
+          color="primary"
+          (click)="selectedType = 'all'; minCapacity = null; onFilterChange()"
+        >
+          Clear Filters
+        </button>
+      </div>
+    </ng-template>
+  </div>
+</div>
