--- a/src/app/features/rooms/components/room-list/room-list.component.scss
+++ b/src/app/features/rooms/components/room-list/room-list.component.scss
@@ -39,7 +39,7 @@
   gap: 24px;
 
   .room-card {
-    height: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     transition: transform 0.2s, box-shadow 0.2s;
