--- a/src/app/features/rooms/components/room-list/room-list.component.html
+++ b/src/app/features/rooms/components/room-list/room-list.component.html
@@ -32,70 +32,62 @@
     </mat-form-field>
   </div>
 
-  <div class="rooms-grid">
-    <ng-container *ngIf="rooms$ | async as rooms; else loading">
-      <div *ngIf="rooms.length > 0; else noRooms">
-        <mat-card *ngFor="let room of rooms" class="room-card">
-          <mat-card-header>
-            <mat-icon mat-card-avatar>{{
-              getRoomTypeIcon(room.type)
-            }}</mat-icon>
-            <mat-card-title>{{ room.name }}</mat-card-title>
-            <mat-card-subtitle>
-              <mat-chip-set>
-                <mat-chip>{{ room.type | titlecase }}</mat-chip>
-                <mat-chip>{{ room.capacity }} people</mat-chip>
-              </mat-chip-set>
-            </mat-card-subtitle>
-          </mat-card-header>
+  <ng-container *ngIf="rooms$ | async as rooms; else loading">
+    <div *ngIf="rooms.length > 0; else noRooms" class="rooms-grid">
+      <mat-card *ngFor="let room of rooms" class="room-card">
+        <mat-card-header>
+          <mat-icon mat-card-avatar>{{ getRoomTypeIcon(room.type) }}</mat-icon>
+          <mat-card-title>{{ room.name }}</mat-card-title>
+          <mat-card-subtitle>
+            <mat-chip-set>
+              <mat-chip>{{ room.type | titlecase }}</mat-chip>
+              <mat-chip>{{ room.capacity }} people</mat-chip>
+            </mat-chip-set>
+          </mat-card-subtitle>
+        </mat-card-header>
 
-          <mat-card-content>
-            <p>{{ room.description }}</p>
-            <p class="price">{{ formatPrice(room.pricePerHour) }} / hour</p>
-            <p class="min-duration">
-              Min. duration: {{ room.minDuration }} minutes
-            </p>
-          </mat-card-content>
+        <mat-card-content>
+          <p>{{ room.description }}</p>
+          <p class="price">{{ formatPrice(room.pricePerHour) }} / hour</p>
+          <p class="min-duration">
+            Min. duration: {{ room.minDuration }} minutes
+          </p>
+        </mat-card-content>
 
-          <mat-card-actions>
-            <button
-              mat-button
-              color="primary"
-              [routerLink]="['/rooms', room.id]"
-            >
-              VIEW DETAILS
-            </button>
-            <button
-              mat-raised-button
-              color="primary"
-              [routerLink]="['/rooms/book', room.id]"
-            >
-              BOOK NOW
-            </button>
-          </mat-card-actions>
-        </mat-card>
-      </div>
-    </ng-container>
+        <mat-card-actions>
+          <button mat-button color="primary" [routerLink]="['/rooms', room.id]">
+            VIEW DETAILS
+          </button>
+          <button
+            mat-raised-button
+            color="primary"
+            [routerLink]="['/rooms/book', room.id]"
+          >
+            BOOK NOW
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </ng-container>
 
-    <ng-template #loading>
-      <div class="loading-container">
-        <mat-spinner diameter="40"></mat-spinner>
-        <p>Loading rooms...</p>
-      </div>
-    </ng-template>
+  <ng-template #loading>
+    <div class="loading-container">
+      <mat-spinner diameter="40"></mat-spinner>
+      <p>Loading rooms...</p>
+    </div>
+  </ng-template>
 
-    <ng-template #noRooms>
-      <div class="no-rooms-container">
-        <mat-icon>search_off</mat-icon>
-        <p>No rooms found matching your criteria.</p>
-        <button
-          mat-button
-          color="primary"
-          (click)="selectedType = 'all'; minCapacity = null; onFilterChange()"
-        >
-          Clear Filters
-        </button>
-      </div>
-    </ng-template>
-  </div>
+  <ng-template #noRooms>
+    <div class="no-rooms-container">
+      <mat-icon>search_off</mat-icon>
+      <p>No rooms found matching your criteria.</p>
+      <button
+        mat-button
+        color="primary"
+        (click)="selectedType = 'all'; minCapacity = null; onFilterChange()"
+      >
+        Clear Filters
+      </button>
+    </div>
+  </ng-template>
 </div>
