style: - change global layout system to grid - adjust vert. space of main - adjust footer height - standard-height for room-cards

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,12 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+}
+
 main {
+  overflow-y: auto;
   background-color: #fff9ee;
 }
