--- a/src/app/features/rooms/components/room-list/room-list.component.scss
+++ b/src/app/features/rooms/components/room-list/room-list.component.scss
@@ -40,6 +40,7 @@
 
   .room-card {
     height: fit-content;
+    min-height: 24rem;
     display: flex;
     flex-direction: column;
     transition: transform 0.2s, box-shadow 0.2s;
