--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -5,6 +5,7 @@
 
   .footer-content {
     max-width: 75rem;
+    height: calc(1rem - 1px);
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
